--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-* {
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -13,13 +17,70 @@ body {
 .container {
   position: relative;
   max-width: 1170px;
+  height: 100vh;
   margin-left: auto;
   margin-right: auto;
   padding: 1em;
   border-radius: 50%;
 }
 
-.close-btn {
+.loading {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s 0.2s;
+}
+
+.change .loading {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+
+.loading-bg {
+  width: 8rem;
+  height: 8rem;
+  background-color: #ff4b5a;
+  border-radius: 50%;
+  box-shadow: 0 1rem 3rem rgba(255, 75, 90, 0.5);
+  animation: loadingAnimation 0.9s infinite;
+}
+
+@keyframes loadingAnimation {
+  0% {
+    width: 10rem;
+    height: 10rem;
+    background-color: #ff4b5a;
+  }
+
+  50% {
+    width: 12rem;
+    height: 12rem;
+    background: #ff616f;
+  }
+}
+
+.loading i {
+  width: 8rem;
+  height: 8rem;
+  color: #fff;
+  font-size: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#close-btn {
   position: absolute;
   top: -0.5rem;
   right: -0.5rem;
@@ -29,26 +90,43 @@ body {
   border: 0.1rem solid #eee;
   border-radius: 50% !important;
   box-shadow: 0.1rem;
+  transition: all 0.3s;
 }
 
-.wrapper {
-  box-shadow: 0 3rem 6rem 0 rgba(72, 94, 116, 0.7);
+#close-btn:hover {
+  background: #222;
+  color: #fff;
+  border: 0.025rem solid #fff;
 }
 
 .wrapper > * {
-  padding: 1em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem 4rem 0 4rem;
   border-radius: 1rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+
+.change .wrapper > * {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s 0.2s;
 }
 
 .contact {
   background: #f9feff;
+  height: 32rem;
+  width: 80%;
 }
 
 /* FORM STYLES */
 .contact form {
   display: grid;
-  /* grid-template-columns: 1fr; */
-  grid-gap: 20px;
+  grid-gap: 2rem;
 }
 
 .contact form label {
@@ -59,51 +137,92 @@ body {
   margin: 0;
 }
 
-.contact form .full {
-  grid-column: 1 / 3;
-}
-
 .contact form input,
 .contact form textarea {
   width: 100%;
-  padding: 1em;
-  border: 1px solid #c9e6ff;
+  background-color: #f9feff;
+  border: none;
+  border-bottom: 0.175rem solid #bbb;
+  outline: none;
+  padding: 0 0 1rem 0;
+  transition: border-bottom 0.3s ease-in-out;
+}
+
+.contact form input:focus,
+.contact form textarea:focus {
+  border-bottom: 0.175rem solid #ff4b5a;
+}
+
+.contact form input::placeholder,
+.contact form textarea::placeholder {
+  color: #222;
+  transition: color 0.3s;
+}
+
+.contact form input:focus::placeholder,
+.contact form textarea:focus::placeholder {
+  color: transparent;
 }
 
 contact form input {
-  border: 0;
+  border: none;
+  border-bottom: 1rem solid #bbb;
+  font-size: 1rem;
+  padding: 0 0 1rem 0;
 }
 
-.contact form button {
-  /* background-color: #ff4b5a; */
+.submit-btn {
   background: #92bde7;
   color: #fff;
+  font-size: 1rem;
   border: 0;
-  width: 18rem;
-  padding: 1em;
+  width: 12rem;
+  height: 4rem;
+
   border: none;
   border-radius: 3rem;
-  box-shadow: 0 0.3rem 1rem rgba(255, 75, 90, 0.5);
+  box-shadow: 0 0.3rem 1rem rgba(33, 173, 238, 0.5);
   cursor: pointer;
+  position: relative;
+  transition: all 0.5s;
 }
 
-.contact form button:hover,
-.contact form button:focus {
-  /* background: #92bde7; */
+.submit-btn:hover {
   background: #c9e6ff;
   color: #fff;
-  outline: 0;
-  transition: background-color 2s ease-out;
+}
+
+.submit-btn span {
+  position: absolute;
+  top: 40%;
+  left: 3.5rem;
+}
+
+.submit-btn i {
+  position: absolute;
+  right: 3.5rem;
+  font-size: 1rem;
+  transition: right 0.5s;
+  top: 40%;
+}
+
+.submit-btn:hover i {
+  right: 2rem;
 }
 
 /* LARGE SCREENS */
 @media (min-width: 700px) {
   .wrapper {
     display: grid;
-    /* grid-template-columns: 1fr */
+    grid-gap: 2rem;
+    border-radius: 1rem;
   }
 
   .wrapper > * {
-    padding: 2em;
+    padding: 2rem 4.5rem 2rem 4.5rem;
+  }
+
+  .contact form .full {
+    grid-column: 1 / 3;
   }
 }
